# PWPy

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
src/: config.py
src/pom/: demoblazer_pom.py
src/pom/components/: header_component.py  login_modal.py
src/pom/pages/: base_pom.py  cart_page.py  home_page.py  product_page.py
tests/: conftest.py
tests/functional/: test_login.py
tests/regression/: test_order.py
