[tool.pytest.ini_options]
addopts = "--tracing retain-on-failure"
testpaths = [
    "tests",
]
pythonpath =["."]
[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "mge",email = "getka.magdalena@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "annotated-types (==0.7.0)",
    "ansi2html (==1.9.2)",
    "anyio (==4.8.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "docutils (==0.21.2)",
    "dulwich (==0.22.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "findpython (==0.6.2)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "htmlmin2 (==0.1.13)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.0.0)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.5)",
    "keyring (==25.6.0)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "nodeenv (==1.9.1)",
    "numpy (==2.2.3)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "pbs-installer (==2025.2.12)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.6)",
    "playwright (==1.50.0)",
    "pluggy (==1.5.0)",
    "poetry (==2.1.1)",
    "poetry-core (==2.1.1)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.8.1)",
    "pydantic-core (==2.27.2)",
    "pyee (==12.1.1)",
    "pyproject-hooks (==1.2.0)",
    "pyright (==1.1.396)",
    "pytest (==8.3.5)",
    "pytest-base-url (==2.1.0)",
    "pytest-playwright (==0.7.0)",
    "pytest-reporter (==0.5.3)",
    "pytest-reporter-html1 (==0.9.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "python-slugify (==8.0.4)",
    "pytz (==2025.1)",
    "rapidfuzz (==3.12.2)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "ruff (==0.9.9)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "text-unidecode (==1.3)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.3.3.18)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.29.2)",
    "xattr (==1.1.4)",
    "xdist (==0.0.2)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
